<resources>
    <string name="app_name">Transgeo</string>
    <string name="welcome">Welcome,</string>
    <string name="transgeo">Transgeo</string>
    <string name="latihan">Latihan</string>
    <string name="tokoh">Tokoh</string>
    <string name="home">Home</string>
    <string name="test">Test</string>
    <string name="calculator">Calculator</string>
    <string name="about">About</string>
    <string name="phytagoras">Phytagoras</string>
    <string name="master_filsafat">Master Filsafat</string>
    <string name="deskTokoh">Phytagoras adlaah master filsafat, ia lahir di Yunani dan Iraq di zaman batu dan Iraq di zaman batu dan Iraq di zaman batu dan Iraq
         zaman batu dan Iraq di zaman batu dan Iraq di zaman ba zaman batu dan Iraq di zaman batu dan Iraq di zaman badi zaman batu</string>
    <string name="lihat_semua">Lihat Semua</string>

    <string name="cal_c">C</string>
    <string name="kurung">( )</string>
    <string name="persen">%</string>
    <string name="bagi">/</string>
    <string name="x">x</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="samadengan">=</string>
    <string name="koma">,</string>
    <string name="nol">0</string>
    <string name="satu">1</string>
    <string name="dua">2</string>
    <string name="tiga">3</string>
    <string name="empat">4</string>
    <string name="lima">5</string>
    <string name="enam">6</string>
    <string name="tujuh">7</string>
    <string name="delapan">8</string>
    <string name="sembilan">9</string>
    <string name="plusminus">+/-</string>
    <string name="cal_perhitungan">38 x 35</string>
    <string name="cal_hasil">12345</string>
    <string name="menu_ujian">Ujian</string>
    <string name="menu_kalkulator">Kalkulator</string>
    <string name="menu_informasi">Informasi</string>
    <string name="refleksi"><u>Refleksi</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pengertian">Pengertian</string>
    <string name="syarat">Syarat</string>
    <string name="langkah">Langkah - Langkah</string>
    <string name="contoh">Contoh Penyelesaian</string>
    <string name="video">Video</string>

    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="rotasi"><u>Rotasi</u></string>
    <string name="dilatasi"><u>Dilatasi</u></string>
    <string name="translasi"><u>Translasi</u></string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="sebelumnya">Sebelumnya</string>
    <string name="sudahsiap">Sudah siap </string>
    <string name="memulai_latihan">memulai latihan?</string>
    <string name="deskStartSoal">Siapkan secangkir kopi dan snack yang banyak sebelum memulai latihan ya !   Selamat mengerjakan :)</string>
    <string name="start_soal">Mulai Mengerjakan</string>
    <string name="ujianselesai">Ujian Selesai !</string>
    <string name="nilai">Nilai :</string>
    <string name="nilai78">78</string>
    <string name="jawaban">Jawaban</string>
    <string name="perbanyak_belajar">Perbanyak lagi belajarmu...</string>
    <string name="benar5">23</string>
    <string name="Benar">Benar</string>
    <string name="Salah">Salah</string>
    <string name="salah5">5</string>
    <string name="akhiri_ujian">Akhiri Ujian</string>
    <string name="timer"></string>
    <string name="pertnayaan_verif_soal">Apakah kamu sudah yakin dengan jawabanmu? \n Jangan lupa periksa kembali sebelum mengumpulkan jawaban.</string>
    <string name="kamu_belum">"Kamu belum mengerjakan nomor \n"</string>
    <string name="kembali">KEMBALI</string>
    <string name="kumpulkan">KUMPULKAN</string>
    <string name="meninggalkansoal">Apakah kamu yakin ingin keluar?</string>
    <string name="tidak">TIDAK</string>
    <string name="keluar">KELUAR</string>
    <string name="jawabansalah">Jawaban Salah</string>
    <string name="jawabanbenar">Jawaban Benar</string>
    <string name="akhiri_latihan">Akhiri Latihan</string>
    <string name="waktuhabis">Maaf waktu ujian anda habis.</string>
    <string name="refleksi_thd_garis">Refleksi Terhadap Garis</string>
    <string name="refleksi_pd_bidangkordinat">Pada Bidang Koordinat</string>
    <string name="bayangan_suatu_titik">Bayangan Suatu Titik</string>
    <string name="bayangan_suatu_garis">Bayangan Suatu Garis</string>
    <string name="bayangan_suatu_bangun">Bayangan Suatu Bangun</string>
    <string name="ref_thd_sumbu_kordinat">Terhadap Sumbu Kordinat</string>
    <string name="ref_garis_sejajar">Terhadap Garis Sejajar dengan Sumbu Kordinat</string>
    <string name="ref_thd_garis"><![CDATA[Terhadap Garis y = x & y = -x]]></string>
    <string name="translasi_notasi">Notasi dg Pasangan Bilangan</string>
    <string name="translasi_kordinat">Kordinat Bayangan</string>
    <string name="translasi_berurutan">Dua Translasi Berurutan</string>
    <string name="rotasi_kartesius">Rotasi Bidang Kartesius</string>
    <string name="rot_90">Rotasi 90°</string>
    <string name="rot_min_90">Rotasi -90°</string>
    <string name="rot_180">Rotasi 180°</string>
    <string name="dil_faktor_skala">Faktor Skala</string>
    <string name="dil_positif">Skala Positif</string>
    <string name="dil_negatif">Skala Negatif</string>
    <string name="dil_bid_kor">Pada Bidang Koordinat</string>
    <string name="dil_pusat_s">Dengan Pusat S (x, y)</string>
    <string name="lihat_jawaban">Lihat Jawaban</string>
    <string name="standar_isi">Standar Isi</string>

    <string name="content_standar_isi">
        • Kompetensi Dasar 3
        \nMenjelaskan transformasi geometri (refleksi, translasi, rotasi, dan dilatasi) yang dihubungkan dengan masalah kontekstual
        \n• Kompetensi Dasar 4
        \nMenyelesaikan masalah kontekstual yang berkaitan dengan transformasi geometri (refleksi, translasi, rotasi, dan dilatasi)
        \n• Tujuan Pembelajaran
        \nMelalui media mobile learning ini, siswa mampu memahami konsep transformasi geometri dan mampu menyelesaikan masalah kontekstual tentang transformasi geometri  (refleksi, translasi, rotasi, dan dilatasi)
    </string>
    <string name="content_daftar_isi">
        MATERI
        \n• Adinawan, M. Cholik. MATEMATIKA SMP Jilid 3A Kelas IX Semester 1. Jakarta: Erlangga. 2018.
        \n• https://www.academia.edu/35713905/Transformasi_Translasi_Refleksi_Rotasi_dan_Dilatasi
        \n• https://youtu.be/097rIkJ0-Pg
        \n• https://youtu.be/_gYu4JqK20g
        \n• https://youtu.be/tM6RMmQ80QM
        \n• https://youtu.be/GKQ0oooWL7g

        \n\nSoal
        \n• Adinawan, M. Cholik. MATEMATIKA SMP Jilid 3A Kelas IX Semester 1. Jakarta: Erlangga.2018.
        \n• Supriadi, Atang. Matematika untuk SMP/MTs Kelas IX. Bandung: Grafindo Media Pratama. 2018.

        \n\nTokoh
        \n• Subchan, dkk.. MATEMATIKA Untuk SMP/MTs Kelas IX. Jakarta: Kmentrian Pendidikan dan Kebudayaan. 2018.
        \n• https://www.kompasiana.com/aanswatie/564fd002b49373ce055e458f/georg-friedrich-bernhard-riemann?page=1
        \n• https://biografi.kamikamu.co.id/euclid-guru-matematika-sepanjang-masa/

    </string>
    <string name="content_tentangapps">
        Aplikasi ini merupakan aplikasi pembelajaran berbasis mobile learning yang membahas bidang geometri dalam matematika yang cocok untuk kalangan pelajar masa kini. Aplikasi ini membahas materi mengenai transformasi geometri yang meliputi refleksi, translasi, rotasi, dan dilatasi yang disajikan secara ringkas dan menarik. Di dalam aplikasi pembelajaran ini terdapat 84 soal yaoitu 60 soal ujian dan 24 soal latihan beserta pembahasannya.
    </string>
    <string name="content_profile">
        ADHAR RIZKI MUSTAFA
        \nDepok, 18 April 1998
        \nadhar.feras18@gmail.com
        \n
        \nPendidikan Matematika
        \nFakultas Ilmu Tarbiyah dan Keguruan
        \nUniversitas Islam Negeri Syarif Hidayatullah Jakarta
    </string>

    <string name="daftar_pustaka">Daftar Pustaka</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="tentang_pengembang">Tentang Pengembang</string>
</resources>
