<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activity.SplashScreenStartSoal">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_list_tokoh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_back_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_ss_start_height"
            android:src="@drawable/gbr_ss_start_soal"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/sudahsiap"
            android:textSize="30sp"
            android:layout_weight="1"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/memulai_latihan"
            android:textSize="30sp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@color/descTokoh"
            android:text="@string/deskStartSoal"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_btn_start"
            android:text="@string/start_soal"
            android:layout_weight="1"
            android:layout_gravity="end"
            android:layout_marginTop="12dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>




    </LinearLayout>

</LinearLayout>