<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="28dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="95dp"
            android:layout_height="122dp"
            android:src="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phytagoras"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins"
                android:maxLines="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/master_filsafat"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/poppins"
                android:maxLines="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deskTokoh"
                android:textColor="@color/descTokoh"
                android:textSize="12sp"
                android:fontFamily="@font/poppins"
                android:maxLines="3"
                android:maxLength="120"
                android:layout_marginEnd="16dp"
                android:textAlignment="viewStart"/>

        </LinearLayout>



    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_black"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="25dp"
        android:background="@color/gray"/>



</LinearLayout>