<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingBottom="16dp"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/alert_width"
                android:layout_height="@dimen/alert_height"
                android:layout_gravity="center"
                android:src="@drawable/ic_alert" />

            <TextView
                android:id="@+id/tv_verif_popup_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/pad_text_materi_top"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/pertnayaan_verif_soal"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_jwb_kosong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/pad_text_materi_top"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:background="@drawable/bg_tv_popup_soal"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_text_materi_top"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_popup_kembali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/selector_btn_popup_soal"
                android:fontFamily="@font/poppins"
                android:text="@string/kembali"
                android:textColor="@color/yellow"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_popup_kumpulkan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_btn_popup_soal"
                android:fontFamily="@font/poppins"
                android:text="@string/kumpulkan"
                android:textColor="@color/yellow"
                android:textSize="14sp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

